# 3D-fractals

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
3D_fractals/assets/: fractalFrag.glsl  fractalVert.glsl  options.h
3D_fractals/src/: main.cpp  shaders.h
